--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
 PORT = 5000
 DB_NAME=online_store
-DB_USER=postres
-DB_PASSWORD=postres
+DB_USER=postgres
+DB_PASSWORD=postgres
 DB_HOST=localhost
-DB_PORT=55009
+DB_PORT=5432
+SECRET_KEY=random_key
